Project

General

Profile

Actions

Bug #10125

closed

smatch fixes for cmd-inet

Added by John Levon almost 5 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
2018-12-19
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

Fix a few minor issues smatch found in usr/src/cmd/cmd-inet

Actions #1

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit cbf54fed071131ba3446db06df29807d639650ab

commit  cbf54fed071131ba3446db06df29807d639650ab
Author: John Levon <john.levon@joyent.com>
Date:   2019-03-07T11:21:11.000Z

    10125 smatch fixes for cmd-inet
    Reviewed by: Dan McDonald <danmcd@joyent.com>
    Reviewed by: Toomas Soome <tsoome@me.com>
    Approved by: Richard Lowe <richlowe@richlowe.net>

Actions

Also available in: Atom PDF